# wagtail-defender

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg  testmanage.py  tox.ini
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: test.yml
tests/test/: __init__.py  apps.py  settings.py
wagtail_defender/: __init__.py  apps.py  wagtail_hooks.py
wagtail_defender/templates/wagtail_defender/: lockout.html
wagtail_defender/templates/wagtail_defender/wagtailadmin/: access_attempt_view_set_index.html  confirm_bulk_delete.html
wagtail_defender/test/: __init__.py  apps.py  settings.py
